--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,9 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 *.local
 
 # Editor directories and files
