--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.0.1",
     "supertest": "^7.2.2"
   }
